--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   --space-xxl: 2.5rem; /* 40px */
   --space-xl: 2rem; /* 32px */
   --space-l: 1.25rem; /* 20px */
-
+  --space-m: 1rem /* 16px */
 }
 
 @layer base {
