feat: update 50% WorkBlock Task

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,29 +4,15 @@
 
 /* Move all of variables here directly to tailwindcss */
 :root {
-  --primary-text-hex: #1C1C1C;
-  --secondary-text-hex: #ECECEC;
-  --paragraph-text-hex:  rgba(236, 236, 236, 1)
- 
-  --container-px: 1440px;
+  --primary-text-hex: #1c1c1c;
+  --secondary-text-hex: #ececec;
 
-  --space-xxxl: 3.375rem; /* 54px */
-  --space-xxl: 2.5rem; /* 40px */
-  --space-xl: 2rem; /* 32px */
-  --space-l: 1.25rem; /* 20px */
-  --space-m: 1rem /* 16px */
+  --container-px: 1440px;
 }
 
 @layer base {
-  html {
-    @apply scroll-smooth;
+  html,
+  body {
+    @apply p-0 m-0 scroll-smooth;
   }
-}
-
-/* TODO: Move to base */
-html,
-body {
-  padding: 0;
-  margin: 0;
-  overscroll-behavior: none;
 }
