--- a/app/globals.css
+++ b/app/globals.css
@@ -10,4 +10,15 @@
     @apply p-0 m-0 scroll-smooth;
   }
 }
+@layer components {
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
